add React-id-Swiper to ClassroomSelect

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,14 @@
       rel="stylesheet"
       href="https://unpkg.com/react-gif-player@0.4.2/dist/gifplayer.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css"
+    />
 
     <!-- External sources -->
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"> -->
